--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     ],
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^6",
-        "phpstan/phpstan": "^0.11.5",
-        "vimeo/psalm": "^3.2",
-        "giacocorsiglia/wordpress-stubs": "^5.1"
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5",
+        "phpstan/phpstan": "^1.10",
+        "vimeo/psalm": "^5.0",
+        "yoast/phpunit-polyfills": "^2.0",
+        "wp-phpunit/wp-phpunit": "^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -25,5 +26,10 @@
         "psr-4": {
             "MWPD\\BasicScaffold\\Tests\\": "tests/php/"
         }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "test:unit": "phpunit --testsuite=unit",
+        "test:integration": "phpunit --testsuite=integration"
     }
 }
