--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "phpstan/phpstan": "^1.10",
         "vimeo/psalm": "^5.0",
         "yoast/phpunit-polyfills": "^2.0",
-        "wp-phpunit/wp-phpunit": "^6.0"
+        "wp-phpunit/wp-phpunit": "^6.0",
+        "szepeviktor/phpstan-wordpress": "^1.3"
     },
     "autoload": {
         "psr-4": {
@@ -30,6 +31,12 @@
     "scripts": {
         "test": "phpunit",
         "test:unit": "phpunit --testsuite=unit",
-        "test:integration": "phpunit --testsuite=integration"
+        "test:integration": "phpunit --testsuite=integration",
+        "phpstan": "phpstan analyze",
+        "psalm": "psalm",
+        "analyze": [
+            "@phpstan",
+            "@psalm"
+        ]
     }
 }
