--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "vimeo/psalm": "^5.0",
         "yoast/phpunit-polyfills": "^2.0",
         "wp-phpunit/wp-phpunit": "^6.0",
-        "szepeviktor/phpstan-wordpress": "^1.3"
+        "szepeviktor/phpstan-wordpress": "^1.3",
+        "php-stubs/wordpress-stubs": "^6.2"
     },
     "autoload": {
         "psr-4": {
