--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "squizlabs/php_codesniffer": "^3.7",
         "wp-coding-standards/wpcs": "^3.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-        "phpcompatibility/php-compatibility": "^9.3"
+        "phpcompatibility/php-compatibility": "^9.3",
+        "psalm/plugin-phpunit": "^0.19.0",
+        "humanmade/psalm-plugin-wordpress": "^3.1"
     },
     "autoload": {
         "psr-4": {
