--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,18 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5",
-        "phpstan/phpstan": "^1.10",
-        "vimeo/psalm": "^5.0",
-        "yoast/phpunit-polyfills": "^2.0",
-        "wp-phpunit/wp-phpunit": "^6.0",
-        "szepeviktor/phpstan-wordpress": "^1.3",
-        "php-stubs/wordpress-stubs": "^6.2",
-        "squizlabs/php_codesniffer": "^3.7",
-        "wp-coding-standards/wpcs": "^3.0",
-        "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-        "phpcompatibility/php-compatibility": "^9.3",
-        "psalm/plugin-phpunit": "^0.19.0",
-        "humanmade/psalm-plugin-wordpress": "^3.1"
+        "phpstan/phpstan": "^2",
+        "vimeo/psalm": "^5",
+        "yoast/phpunit-polyfills": "^3",
+        "wp-phpunit/wp-phpunit": "^6",
+        "szepeviktor/phpstan-wordpress": "2.x-dev",
+        "php-stubs/wordpress-stubs": "^6",
+        "squizlabs/php_codesniffer": "^3",
+        "wp-coding-standards/wpcs": "^3",
+        "dealerdirect/phpcodesniffer-composer-installer": "^1",
+        "phpcompatibility/php-compatibility": "^9",
+        "psalm/plugin-phpunit": "^0.19",
+        "humanmade/psalm-plugin-wordpress": "^3"
     },
     "autoload": {
         "psr-4": {
