--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -17,4 +17,5 @@ parameters:
         - '#SimpleInjector::get_dependencies_for\(\) has parameter \$reflection with generic class ReflectionClass but does not specify its types#'
         - '#SimpleInjector::ensure_is_instantiable\(\) has parameter \$reflection with generic class ReflectionClass but does not specify its types#'
         - '#SimpleInjector::get_class_reflection\(\) return type with generic class ReflectionClass does not specify its types#'
+        # Ignore errors related to echo and type casting in views.
         - '#Parameter \#1 \(mixed\) of echo cannot be converted to string.#'
