--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,19 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5",
-        "phpstan/phpstan": "^2",
+        "phpstan/phpstan": "^1 || ^2",
         "vimeo/psalm": "^5",
         "yoast/phpunit-polyfills": "^3",
         "wp-phpunit/wp-phpunit": "^6",
-        "szepeviktor/phpstan-wordpress": "2.x-dev",
+        "szepeviktor/phpstan-wordpress": "^1 || ^2",
         "php-stubs/wordpress-stubs": "^6",
         "squizlabs/php_codesniffer": "^3",
         "wp-coding-standards/wpcs": "^3",
         "dealerdirect/phpcodesniffer-composer-installer": "^1",
         "phpcompatibility/php-compatibility": "^9",
         "psalm/plugin-phpunit": "^0.19",
-        "humanmade/psalm-plugin-wordpress": "^3"
+        "humanmade/psalm-plugin-wordpress": "^3",
+        "rector/rector": "^1.2"
     },
     "autoload": {
         "psr-4": {
