--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "phpcompatibility/php-compatibility": "^9",
         "psalm/plugin-phpunit": "^0.19",
         "humanmade/psalm-plugin-wordpress": "^3",
-        "rector/rector": "^1.2"
+        "rector/rector": "^1.2",
+        "brain/monkey": "^2"
     },
     "autoload": {
         "psr-4": {
